Updated calls to printStackTrace to souts.